Added routes and implemented add functionality.

--- a/gitbitsdun/src/app/todo-detail/todo-detail.component.html
+++ b/gitbitsdun/src/app/todo-detail/todo-detail.component.html
@@ -1,1 +1,4 @@
-<p>todo-detail works!</p>
+<p>Add Todo</p>
+<input type="text" placeholder="Description" [(ngModel)]="description">
+<input type="text" placeholder="Priority" [(ngModel)]="priority">
+<button (click)="add()">Add</button>
