--- a/gitbitsdun/src/app/todo-list/todo-list.component.html
+++ b/gitbitsdun/src/app/todo-list/todo-list.component.html
@@ -1,4 +1,9 @@
+
+<div>
 <p>Here are the list of todos.</p>
-<ol *ngFor="let todoItem of todoList">
-  <li>{{todoItem.description}} - {{todoItem.priority}}</li>
-</ol>
+<a [routerLink]="'/detail'">Add Todo</a>
+  <ol *ngFor="let todoItem of todoList">
+    <li>{{todoItem.description}} - {{todoItem.priority}}</li>
+  </ol>
+</div>
+
