Changed the priority to be a dropdown where a user can pick the priority of a todo task.

--- a/gitbitsdun/src/app/todo-detail/todo-detail.component.html
+++ b/gitbitsdun/src/app/todo-detail/todo-detail.component.html
@@ -1,4 +1,6 @@
 <p>Add Todo</p>
 <input type="text" placeholder="Description" [(ngModel)]="description">
-<input type="text" placeholder="Priority" [(ngModel)]="priority">
+<select [(ngModel)]="priority">
+  <option [ngValue]="priorityItem" *ngFor="let priorityItem of priorityList">{{priorityItem | titlecase }}</option>
+</select>
 <button (click)="add()">Add</button>
