--- a/gitbitsdun/src/app/todo-detail/todo-detail.component.html
+++ b/gitbitsdun/src/app/todo-detail/todo-detail.component.html
@@ -1,9 +1,21 @@
-<p *ngIf="!id">Add Todo</p>
-<p *ngIf="id">Edit Todo</p>
-<input [disabled]="!!id" type="text" placeholder="Description" [(ngModel)]="description">
-<select [(ngModel)]="priority">
-  <option [ngValue]="priorityItem" *ngFor="let priorityItem of priorityList">{{priorityItem | titlecase }}</option>
-</select>
-<button *ngIf="!id" (click)="add()">Add</button>
-<button *ngIf="id" (click)="update()">Update</button>
+<div class="d-flex flex-column align-items-center">
+  <div class="card">
+    <div class="card-body">
+      <h4 *ngIf="!id">Add Todo</h4>
+      <h4 *ngIf="id">Edit Todo</h4>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <input [disabled]="!!id" type="text" class="form-control" id="description" [(ngModel)]="description">
+        </div>
+        <div class="form-group">
+          <label for="priority">Priority</label>
+          <select  class="form-control form-control-sm ml-2" id="priority" [(ngModel)]="priority">
+            <option [ngValue]="priorityItem" *ngFor="let priorityItem of priorityList">{{priorityItem | titlecase }}</option>
+          </select>
+        </div>
+        <button *ngIf="!id" [disabled]="!priority || !description" class="btn btn-sm btn-primary mt-2" (click)="add()">Add</button>
+        <button *ngIf="id"  class="btn btn-sm btn-primary mt-2"  (click)="update()">Update</button>
+    </div>
+  </div>
+</div>
 
